--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "test": "eslint src"
   },
   "dependencies": {
-    "koa": "^2.7.0"
+    "@koa/cors": "^3.0.0",
+    "koa": "^2.7.0",
+    "koa-logger": "^3.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -24,7 +26,14 @@
   },
   "babel": {
     "presets": [
-      "env"
+      [
+        "env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
     ]
   }
 }
