--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@koa/cors": "^3.0.0",
     "got": "^9.6.0",
     "koa": "^2.7.0",
-    "koa-logger": "^3.2.0"
+    "koa-logger": "^3.2.0",
+    "koa-router": "^7.4.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
